@@ -14,12 +14,12 @@
 \begin{document}
 \title{Comments Building the \xAldor{}-\xAxiom{} Interface}
 \author{Ralf Hemmecke}
-\date{06-Jul-2008}
+\date{12-Aug-2008}
 \maketitle
 \begin{abstract}
   We give an overview of the way the \xAldor{}-\xAxiom{} connection is
   built. Unfortunately, due to lack of proper knowledge of the
-  internals of the \xAldor{} compiler and \xAxiom{}, a some parts here
+  internals of the \xAldor{} compiler and \xAxiom{}, some parts here
   consist of pure guessing.
 \end{abstract}
 \tableofcontents
@@ -91,7 +91,7 @@ cliques, i.e., domains that depend on each other. For each clique one
 %
 Note that each clique will be named after its lexicographically
 smallest member where the names are the abbreviated forms of \xAxiom{}
-constructors. Thus, a file like, for example, \filename{COMPCAT.ap}
+constructors. Thus, a file like, for example, \file{COMPCAT.ap}
 will also contain definitions for the constructor \texttt{COMPLEX}.
 
 Among those cliques a compilation order is determined. Then the
@@ -338,6 +338,18 @@ Domains extended in \file{axlit.as} and \file{axextend.as}.
         \code{UniversalSegment}
       \end{quote}
   \end{description}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Known Issues}
+\label{sec:KnownIssues}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+If \file{libaxiom.al} is build incrementally without intermediate
+libraries of the form \file{libaxiom_D.al}, its size is about
+27324110 bytes which is about 3 times as big as the 9320874 that is
+build with srcaldor2 by Peter Broadbery.
+
 
 
 \end{document}
