@@ -1,3 +1,13 @@
+2009-10-10  Ralf Hemmecke  <ralf@hemmecke.de>
+
+	* configure.ac src/aldor/Makefile.in src/aldor/Makefile3.in
+	src/aldor/gendepap.lsp src/aldor/libaxiom.tex src/interp/ax.boot:
+	- Refactor generation of runtime lib for aldor-interface
+	  from src/aldor/Makefile.in into Makefile3.in and remove
+	  reference to attributes.
+	- Remove use of |fileConstructors|, generate domains.mk
+	  without .spad file access.
+
 2009-10-09  Anatoly Raportirenko <ram@sunct1.jinr.ru>
 
 	* configure.ac, src/input/elemnum.input.pamphlet,
